; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_sta_info.c_ap_sta_hash_add.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_sta_info.c_ap_sta_hash_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostapd_data = type { %struct.sta_info** }
%struct.sta_info = type { i32, %struct.sta_info* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ap_sta_hash_add(%struct.hostapd_data* %0, %struct.sta_info* %1) #0 {
  %3 = alloca %struct.hostapd_data*, align 8
  %4 = alloca %struct.sta_info*, align 8
  store %struct.hostapd_data* %0, %struct.hostapd_data** %3, align 8
  store %struct.sta_info* %1, %struct.sta_info** %4, align 8
  %5 = load %struct.hostapd_data*, %struct.hostapd_data** %3, align 8
  %6 = getelementptr inbounds %struct.hostapd_data, %struct.hostapd_data* %5, i32 0, i32 0
  %7 = load %struct.sta_info**, %struct.sta_info*** %6, align 8
  %8 = load %struct.sta_info*, %struct.sta_info** %4, align 8
  %9 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = call i64 @STA_HASH(i32 %10)
  %12 = getelementptr inbounds %struct.sta_info*, %struct.sta_info** %7, i64 %11
  %13 = load %struct.sta_info*, %struct.sta_info** %12, align 8
  %14 = load %struct.sta_info*, %struct.sta_info** %4, align 8
  %15 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %14, i32 0, i32 1
  store %struct.sta_info* %13, %struct.sta_info** %15, align 8
  %16 = load %struct.sta_info*, %struct.sta_info** %4, align 8
  %17 = load %struct.hostapd_data*, %struct.hostapd_data** %3, align 8
  %18 = getelementptr inbounds %struct.hostapd_data, %struct.hostapd_data* %17, i32 0, i32 0
  %19 = load %struct.sta_info**, %struct.sta_info*** %18, align 8
  %20 = load %struct.sta_info*, %struct.sta_info** %4, align 8
  %21 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = call i64 @STA_HASH(i32 %22)
  %24 = getelementptr inbounds %struct.sta_info*, %struct.sta_info** %19, i64 %23
  store %struct.sta_info* %16, %struct.sta_info** %24, align 8
  ret void
}

declare dso_local i64 @STA_HASH(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
